[package]
name = "td_rs"
version = "0.1.0"
authors = ["Antoine Demblon <antoinedemblon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ggez = "0.5.1"
ron = "0.6.0"
serde = "1.0.114"
libmath = "0.2.1"
queues = "1.1.0"

nalgebra = { version = "0.18.1", features = ["serde-serialize"] }